--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -342,7 +342,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
               <section id="section12"></section>
   <div class="mb-5"><div class="text-3xl w-full font-bold">Certifications <hr> </div> </div>
           <ul class="list-disc mx-6 mb-10 grid gap-2">
-                    <li><a href="https://www.eurotox.com/what-is-ert/" target="_blank"> European Register Toxicologist (ONGOING)</a></li>
+                    <li><a href="https://www.eurotox.com/what-is-ert/" target="_blank"> European Register Toxicologist (<u>ONGOING</u>, EXPECTED SPRING 2025)</a></li>
                     <li><a href="https://felasa.eu/" target="_blank"> FELASA certificate</a></li>
           </ul>
 
