--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -55,7 +55,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
         img="/HealthHazard.jpg"
         desc="Keywords: Toxicology, Solvents, Nail Salons, Occupational Health, Public Health, Systematic Review"
         id="p12" 
-        url="/p12/"
+        url="/"
       />
       <div class="divider my-0"></div>
   
@@ -64,7 +64,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
       img="/BPA3.png"
       desc="Keywords: Public Health, Systematic Review, Meta-Analysis, Endocrine Disrupting Chemicals"
       id="p12" 
-      url="/p12/"
+      url="/"
     />
 
     <br>
