--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,30 +21,27 @@ const last_posts = posts.slice(0, 3);
         <div style="height: 0.5rem;"></div>
             <div class="text-1xl font-bold">
             <span class='bigger'>&nbsp;&nbsp;&nbsp;&nbsp; (1)</span>  
-            <span class='headmain'> Faculty of Biomedical Sciences, Lausanne University, Switzerland </span> </div>
+            <a href="https://wp.unil.ch/langletlab/team/" class='headmain'> Faculty of Biomedical Sciences, Lausanne University, Switzerland </a> </div>
+            <div class="text-1xl font-bold">
+              <span class='bigger'>&nbsp;&nbsp;&nbsp;&nbsp; (2)</span>  
+              <a href="https://wp.unil.ch/ecotox/a-propos-about/" class='headmain'> Ecotoxicolgoy Group, Faculty of Geoscience & Environment, Lausanne University </a> 
+              <span class='headmain'> </span> </div>
           <div class="text-1xl font-bold">
-            <span class='bigger'>&nbsp;&nbsp;&nbsp;&nbsp; (2)</span>  
-            <span class='headmain'> Department Environmental Toxicology, EAWAG, Zurich, Switzerland </span> </div>
+            <span class='bigger'>&nbsp;&nbsp;&nbsp;&nbsp; (3)</span>  
+            <a href="https://www.eawag.ch/en/department/utox/" class='headmain'> Department Environmental Toxicology, EAWAG, Zurich, Switzerland  </a> 
+            <span class='headmain'>  </span> </div>
           <div class="text-1xl font-bold">
-              <span class='bigger'>&nbsp;&nbsp;&nbsp;&nbsp; (3)</span> 
+              <span class='bigger'>&nbsp;&nbsp;&nbsp;&nbsp; (4)</span> 
               <span class='headmain'>Independent consultant</span> </div>
-
-
-
                 <div class="py-1"><text class="text-lg"> 
-            
                      <div class="mb-1 text-justify">
- 
-                
                     </div>
                   </text> </div></p>
-
-
 
           <div class="py-1"><text class="text-lg"> 
       <br>
                <div class="mb-1 text-justify">
-                Senior multidisciplinary and outcome-oriented scientist passionate about computational biology, translational medicine and public health, with expertise in multiomics analysis and in-silico modeling.            
+                Senior multidisciplinary scientist passionate about computational biology, translational medicine and public health, with expertise in endocrine-disrupting chemicals, multiomics analysis and in-silico modeling.            
               </div>
             </text> </div></p>
             </text>
@@ -95,7 +92,7 @@ const last_posts = posts.slice(0, 3);
       img="/HealthHazard.jpg"
       desc="Keywords: Toxicology, Solvents, Nail Salons, Occupational Health, Public Health, Systematic Review"
       id="p12" 
-      url="/p12/"
+      url="/"
     />
     <div class="divider my-0"></div>
 
@@ -104,7 +101,7 @@ const last_posts = posts.slice(0, 3);
     img="/BPA3.png"
     desc="Keywords: Public Health, Systematic Review, Meta-Analysis, Endocrine Disrupting Chemicals"
     id="p12" 
-    url="/p12/"
+    url="/"
   />
   <div class="divider my-0"></div>
 </BaseLayout>
