--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -208,18 +208,18 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 <div class="text-3xl w-full font-bold">Awards, Grants and Fellowships <hr> </div>
 </div>
 <div class="time-line-container grid gap-4 mb-10">
-<TimeLineElement title="Research Grant"  subtitle="2023 - Wallonie-Bruxelles Federation (FWB, Belgium)" />
-<TimeLineElement title="Ph.D. Thesis Award"  subtitle="2021 - Society of Neuroendocrinology (SNE, France)" />
-<TimeLineElement title="Postdoctoral Travel Grant"  subtitle="2021 - Léon Fredericq Foundation (FLF, Belgium) for carrying out postdoctoral research at the laboratory of Fanny Langlet (UNIL, Lausanne, Switzerland)" />
-<TimeLineElement title="Short-term Postdoctoral Grant"  subtitle="2021 - Wallonie-Bruxelles Federation (FWB, Belgium)  for carrying out postdoctoral research at the laboratory of Fanny Langlet (UNIL, Lausanne, Switzerland)" />
-<TimeLineElement title="Research stay Grant"  subtitle="2020  - University of Liège for a 3-month research stay in the laboratory of Alejandro Lomniczi (OHSU, Portland, OR, USA)" />
-<TimeLineElement title="Operating grant"  subtitle="2019 - Leon Fredericq Foundation" />
-<TimeLineElement title="Outstanding Abstract Award"  subtitle="2019 - Endocrine Society, during the ENDO2019 meeting in New Orleans (LA, USA)" />
+<TimeLineElement title="Research Grant"  subtitle="2023 - Wallonie-Bruxelles Federation (FWB, Belgium) ~ 60 000 €" />
+<TimeLineElement title="Ph.D. Thesis Award"  subtitle="2021 - Society of Neuroendocrinology (SNE, France) 700 €" />
+<TimeLineElement title="Postdoctoral Research Grant"  subtitle="2021 - Léon Fredericq Foundation (FLF, Belgium) 10 000 €" />
+<TimeLineElement title="Short-term Postdoctoral Grant"  subtitle="2021 - Wallonie-Bruxelles Federation (FWB, Belgium) 7 000 € " />
+<TimeLineElement title="Research stay Grant"  subtitle="2020  - University of Liège for a 3-month research stay in the laboratory of Alejandro Lomniczi (OHSU, Portland, OR, USA) 10 000 €" />
+<TimeLineElement title="Operating grant"  subtitle="2019 - Leon Fredericq Foundation 10 000 €" />
+<TimeLineElement title="Outstanding Abstract Award"  subtitle="2019 - Endocrine Society, during the ENDO2019 meeting in New Orleans (LA, USA) 700 $" />
 <TimeLineElement title="Early Career Forum and Travel Award"  subtitle="2019 - Endocrine Society, during the ENDO2019 meeting in New Orleans (LA, USA)" />
-<TimeLineElement title="Research stay Grant"  subtitle="2018 - Léon Fredericq Foundation (FLF, Belgium) for a 3-month research stay in the laboratory of Alejandro Lomniczi (OHSU, Portland, OR, USA)" />         
-<TimeLineElement title="Research stay Grant"  subtitle="2018 - Rotary Club (District 1630) for a 3-month research stay in the laboratory of Alejandro Lomniczi (OHSU, Portland, OR, USA)" />
-<TimeLineElement title="François Mignolet Award"  subtitle="2018 - Leon Fredericq Foundation" />
-<TimeLineElement title="Operating grant"  subtitle="2017 - Leon Fredericq Foundation" />
+<TimeLineElement title="Research stay Grant"  subtitle="2018 - Léon Fredericq Foundation (FLF, Belgium) for a 3-month research stay in the laboratory of Alejandro Lomniczi (OHSU, Portland, OR, USA) 10 000 €" />         
+<TimeLineElement title="Research stay Grant"  subtitle="2018 - Rotary Club (District 1630) for a research stay in the laboratory of Alejandro Lomniczi (OHSU, Portland, OR, USA) 3 000 €" />
+<TimeLineElement title="François Mignolet Award"  subtitle="2018 - Leon Fredericq Foundation 10 000 €" />
+<TimeLineElement title="Operating grant"  subtitle="2017 - Leon Fredericq Foundation 10 000 €" />
 <TimeLineElement title="Non-FRIA Ph.D. program scholarship"  subtitle="2016-2020 - University of Liège (Belgium) " />
 <TimeLineElement title="Master’s program  scholarship"  subtitle="2013-2015 - University of Liège (Belgium) " />
 <TimeLineElement title="ERASMUS program scholarship"  subtitle="2012-2013 - Catholic University of Louvain (UCL, Belgium)" />
