--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -24,6 +24,15 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
 
 <BaseLayout title = "CV - David Lopez Rodriguez">
+  <!-- Google tag (gtag.js) -->
+<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-T3S8LY51Z2"></script>
+<script type="text/partytown">
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T3S8LY51Z2');
+</script>
 <div style="text-align:center">
     <nav style="background:#F2F7FF;">
     <a>  |  </a> 
