--- a/src/pages/p12.astro
+++ b/src/pages/p12.astro
@@ -5,7 +5,15 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 
 <BaseLayout title = "Solvents Project - David Lopez Rodriguez">
+<!-- Google tag (gtag.js) -->
+<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-T3S8LY51Z2"></script>
+<script type="text/partytown">
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-T3S8LY51Z2');
+</script>
 
 <div>
           <div class="text-3xl w-full font-bold mb-2">Multi-Omics Approaches to Evaluate the Neurotoxicity of Propylene Glycol Ether Solvents</div>
