--- a/src/pages/p4.astro
+++ b/src/pages/p4.astro
@@ -4,13 +4,15 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 ---
 
 
-<BaseLayout title = "Tanycyte Ontogeny - David Lopez Rodriguez"><script async src="https://www.googletagmanager.com/gtag/js?id=G-B2JEVNPCKR"></script>
-<script>
+<BaseLayout title = "Tanycyte Ontogeny - David Lopez Rodriguez">
+<!-- Google tag (gtag.js) -->
+<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-T3S8LY51Z2"></script>
+<script type="text/partytown">
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-B2JEVNPCKR');
+  gtag('config', 'G-T3S8LY51Z2');
 </script>
 
 <div>
