--- a/src/pages/Contact.astro
+++ b/src/pages/Contact.astro
@@ -11,7 +11,15 @@ const last_posts = posts.slice(0, 3);
 ---
 
 <BaseLayout title = "Contact - David Lopez Rodriguez">
+<!-- Google tag (gtag.js) -->
+<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-T3S8LY51Z2"></script>
+<script type="text/partytown">
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-T3S8LY51Z2');
+</script>
 	
 <div class="social-icons px-6 my-2 py-2 flex">
 		<a href="mailto:david.lopezrodriguez@unil.ch" target="_blank" class="mx-3" aria-label="Email" title="Email">
