--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -26,6 +26,15 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 
 <BaseLayout title = "Publications - David Lopez Rodriguez">
+<!-- Google tag (gtag.js) -->
+<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-T3S8LY51Z2"></script>
+<script type="text/partytown">
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T3S8LY51Z2');
+</script>
 
     <div style="text-align:center">
       <nav style="background:#F2F7FF;">
