--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,6 +13,17 @@ const last_posts = posts.slice(0, 3);
 
 
 <BaseLayout>
+<!-- Google tag (gtag.js) -->
+<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-T3S8LY51Z2"></script>
+<script type="text/partytown">
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T3S8LY51Z2');
+</script>
+
+
 
     <div class="pb-12 mt-5"> <div class="text-4xl font-bold"> David Lopez-Rodriguez, PhD</div>
           <div class="text-2xl font-bold mt-1"> 
