--- a/src/pages/p6.astro
+++ b/src/pages/p6.astro
@@ -5,13 +5,14 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 
 <BaseLayout title = "EDC biomarkers - David Lopez Rodriguez">
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-B2JEVNPCKR"></script>
-<script>
+<!-- Google tag (gtag.js) -->
+<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-T3S8LY51Z2"></script>
+<script type="text/partytown">
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-B2JEVNPCKR');
+  gtag('config', 'G-T3S8LY51Z2');
 </script>
 
 <div>
