--- a/src/pages/p9.astro
+++ b/src/pages/p9.astro
@@ -5,15 +5,15 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 
 <BaseLayout title = "Bisphenol A - David Lopez Rodriguez">
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-B2JEVNPCKR"></script>
-<script>
+<!-- Google tag (gtag.js) -->
+<script type="text/partytown" async src="https://www.googletagmanager.com/gtag/js?id=G-T3S8LY51Z2"></script>
+<script type="text/partytown">
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-B2JEVNPCKR');
+  gtag('config', 'G-T3S8LY51Z2');
 </script>
-
 <div>
           <div class="text-3xl w-full font-bold mb-2">The effects of the Endocrine Disruptor Bisphenol A on puberty and reproduction</div>
         </div>
