--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -67,7 +67,6 @@ import HorizontalCard from "../components/HorizontalCard.astro";
       <ul class="list-disc mx-6 mb-10 grid gap-2">
         <li><div class="text-lg"> <p align="justify"> Bridgeman L, Cimbalo A, <u>Lopez-Rodriguez D</u>, Pamies D, Frangiamone M. <i>  Exploring Toxicological Pathways of Microplastics and Nanoplastics: Insights from Animal and Cellular Models. </i> Under review in Journal of Hazardous Materials. </p> </div>
         <li><div class="text-lg"> <p align="justify"> Wang S, <u>Lopez-Rodriguez D</u>, Frangiamone M, Ma F, Pamies D. <i>  Proteomic profiling of the BrainSpheres derived from human induced pluripotent stem cells. </i> Under review in Frontiers in Cell and Developmental Biology. </p> </div>
-        <li><div class="text-lg"> <p align="justify"> Fudvoye J, <u>Lopez-Rodriguez D</u>, Parent AS. <i> Early placental biomarkers of a developmental exposure to a very low dose of BPS.</i> Under review in Reproductive Toxicology. </p> </div>
         </li>  <li><div class="text-lg"> <p align="justify">  Guerrero-Limon G, Duroux D, Kamstra J, Legler J, Chevre N, <u>Lopez-Rodriguez D</u>. <i> An Integrative Framework for the Identification and Prioritization of Endocrine Disrupting Chemicals </i> Manuscripts in Preparation. </p> </div></li>
         <li><div class="text-lg"> <p align="justify">  <u>Lopez-Rodriguez D</u>, Pamies D, Meister I, Jornod N, Repond C, Boccard J, Fleurimont J, Rudaz S, Zurich MG. <i> The use of Multiomic approaches to evaluate the Neurotoxicity of Polyetylene Glycol Ethers.  </i> Manuscripts in Preparation. </p> </div></li>
         <li><div class="text-lg"> <p align="justify"> Wang S, <u>Lopez-Rodriguez D</u>, Kalph J, Morales Pantoja I, Nunez C, Fritsche E, Smirnova L, Pamies D. <i> Reproducibility assessment of the hiPSC-derived Brain Spheroid model. </i>Manuscripts in Preparation. </p> </div></li>
@@ -81,13 +80,6 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 
 
-
-
-
-
-
-
-
 <section id="section2"></section>
     <div class="text-2xl w-full font-bold mb-0 mt-10">Peer-reviewed Scientific Articles<hr> </div>
     <div style="line-height:50%;"> <br></div>
@@ -97,6 +89,10 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
       <li><div class="text-lg"> <p align="justify"> Brunner M*, <u>Lopez-Rodriguez D</u>*, Estrada-Meza J, Dali J, Rohrbach A, Deglise T, Messina A, Thorens B, Santoni F, Langlet F. <i> Fasting induces a metabolic switch and a spatial redistribution of tanycyte functions on lipid processing and neuronal interactions. </i> <b>  Nature Communications. </b> Volume 15, article number 6604, (2024) </p> </div></li>
       <div class="text-lg"> <p align="justify" style="margin-left: 20px"> <b> &#8594; *Co-first authorship</b></p> </div>
+
+      <li><div class="text-lg"> <p align="justify"> Fudvoye J*, <u>Lopez-Rodriguez D</u>*, Parent AS. <i> Early placental biomarkers of a developmental exposure to a very low dose of BPS.</i> Accepted for publication in Reproductive Toxicology. </p> </div>
+        <div class="text-lg"> <p align="justify" style="margin-left: 20px"> <b> &#8594; *Co-first authorship</b></p> </div>
+
 
       <li><div class="text-lg"> <p align="justify"><a href="https://www.nature.com/articles/s41574-020-00436-3" target="_blank"><u>Lopez-Rodriguez D</u>, Franssen D, Bakker J, Lomniczi A, Parent AS. <i>Cellular and molecular features of EDC exposure: consequences for the GnRH network.</i> <b>Nature Reviews Endocrinology</b>. 2021 Feb;17(2):83-96  </div>
       </p></a></li>
