--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const last_posts = posts.slice(0, 3);
             <a href="https://wp.unil.ch/langletlab/team/" class='headmain'> Faculty of Biomedical Sciences, Lausanne University, Switzerland </a> </div>
             <div class="text-1xl font-bold">
               <span class='bigger'>&nbsp;&nbsp;&nbsp;&nbsp; (2)</span>  
-              <a href="https://wp.unil.ch/ecotox/a-propos-about/" class='headmain'> Ecotoxicolgoy Group, Faculty of Geoscience & Environment, Lausanne University </a> 
+              <a href="https://wp.unil.ch/ecotox/a-propos-about/" class='headmain'> Ecotoxicology Group, Faculty of Geoscience & Environment, Lausanne University </a> 
               <span class='headmain'> </span> </div>
           <div class="text-1xl font-bold">
             <span class='bigger'>&nbsp;&nbsp;&nbsp;&nbsp; (3)</span>  
