--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -65,14 +65,11 @@ import HorizontalCard from "../components/HorizontalCard.astro";
       <div style="line-height:50%;"> <br></div>
 
       <ul class="list-disc mx-6 mb-10 grid gap-2">
-
-          
-
-
-        <li><div class="text-lg"> <p align="justify"> Bridgeman L, Cimbalo A, <u>Lopez-Rodriguez D</u>, Pamies D, Frangiamone M. <i>  Exploring Toxicological Pathways of Microplastics and Nanoplastics: Insights from Animal and Cellular Models. </i> Under review in Journal of Hazardous Materials. </p> </div>
-        <li><div class="text-lg"> <p align="justify"> Wang S, <u>Lopez-Rodriguez D</u>, Frangiamone M, Ma F, Pamies D. <i>  Proteomic profiling of the BrainSpheres derived from human induced pluripotent stem cells. </i> Under review in Frontiers in Cell and Developmental Biology. </p> </div>
-        </li>  <li><div class="text-lg"> <p align="justify">  Guerrero-Limon G, Duroux D, Kamstra J, Legler J, Chevre N, <u>Lopez-Rodriguez D</u>. <i> An Integrative Framework for the Identification and Prioritization of Endocrine Disrupting Chemicals </i> Manuscripts in Preparation. </p> </div></li>
-        </li>  <li><div class="text-lg"> <p align="justify">  Pamies D, Frangiamone M, Lamberto F, <u>Lopez-Rodriguez D</u>, Stacey, G. <i> Readiness of iPSC-Based Assays for Standardized Applications. </i> Report for the OECD. In Preparation.</p> </div></li>
+        <li><div class="text-lg"> <p align="justify"> Carstens KE,Gronskaya E,Jaeckel D, <u>Lopez-Rodriguez D</u>, Shafer TJ,Zurich M,Pamies D. <i> Application of a high-density microelectrode array assay using a 3D human iPSC-derived brain microphysiological system model for in vitro neurotoxicity screening of environmental compounds. </i> Under Review in Archives of Toxicology </p> </div>
+        <li><div class="text-lg"> <p align="justify"> Wang S, <u>Lopez-Rodriguez D</u>, Frangiamone M, Ma F, Pamies D. <i>  Proteomic profiling of the BrainSpheres derived from human induced pluripotent stem cells. </i> Under review in Frontiers in Cell and Developmental Biology. </p> </div></li>
+          <li><div class="text-lg"> <p align="justify">  Guerrero-Limon G, Duroux D, Kamstra J, Legler J, Chevre N, <u>Lopez-Rodriguez D</u>. <i> An Integrative Framework for the Identification and Prioritization of Endocrine Disrupting Chemicals </i> Manuscripts in Preparation. </p> </div></li>
+         <li><div class="text-lg"> <p align="justify">  Pamies D, Frangiamone M, Lamberto F, <u>Lopez-Rodriguez D</u>, Stacey, G. <i> Readiness of iPSC-Based Assays for Standardized Applications. </i> Report for the OECD. In Preparation.</p> </div></li>
+         <li><div class="text-lg"> <p align="justify">  Luz-Lachat, E, Berthet A, Busiah K,  <u>Lopez-Rodriguez D</u>. <i> Association between Bisphenol A and Autism Spectrum Disorders (ASD). A systematic review and meta-analysis. </i> Manuscripts in Preparation. </p> </div></li>
         <li><div class="text-lg"> <p align="justify">  <u>Lopez-Rodriguez D</u>, Pamies D, Meister I, Jornod N, Repond C, Boccard J, Fleurimont J, Rudaz S, Zurich MG. <i> The use of Multiomic approaches to evaluate the Neurotoxicity of Polyetylene Glycol Ethers.  </i> Manuscripts in Preparation. </p> </div></li>
         <li><div class="text-lg"> <p align="justify"> Wang S, <u>Lopez-Rodriguez D</u>, Kalph J, Morales Pantoja I, Nunez C, Fritsche E, Smirnova L, Pamies D. <i> Reproducibility assessment of the hiPSC-derived Brain Spheroid model. </i>Manuscripts in Preparation. </p> </div></li>
         <li><div class="text-lg"> <p align="justify"> Pamies D, <u>Lopez-Rodriguez D</u>, Bertoli J, Meister I, Jornod N, Repond C, Boccard J, Fleurimont J, Nunes C, Rudaz S, Zurich MG. <i> Evaluation of the Neurotoxicity of Glycol Ether Solvents in Humans Using New Approach Methodologies (NAMs). </i>Manuscripts in Preparation. </p> </div></li>
@@ -81,8 +78,6 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
       </ul>
       
-
-
 
 
 <section id="section2"></section>
@@ -95,10 +90,10 @@ import HorizontalCard from "../components/HorizontalCard.astro";
       <li><div class="text-lg"> <p align="justify"> Brunner M*, <u>Lopez-Rodriguez D</u>*, Estrada-Meza J, Dali J, Rohrbach A, Deglise T, Messina A, Thorens B, Santoni F, Langlet F. <i> Fasting induces a metabolic switch and a spatial redistribution of tanycyte functions on lipid processing and neuronal interactions. </i> <b>  Nature Communications. </b> Volume 15, article number 6604, (2024) </p> </div></li>
       <div class="text-lg"> <p align="justify" style="margin-left: 20px"> <b> &#8594; *Co-first authorship</b></p> </div>
 
-      <li><div class="text-lg"> <p align="justify"> Fudvoye J*, <u>Lopez-Rodriguez D</u>*, Parent AS. <i> Early placental biomarkers of a developmental exposure to a very low dose of BPS.</i> Accepted for publication in Reproductive Toxicology. </p> </div>
+      <li><div class="text-lg"> <p align="justify"> <a href="https://www.sciencedirect.com/science/article/pii/S0304389425007095?via%3Dihub" target="_blank">    Fudvoye J*, <u>Lopez-Rodriguez D</u>*, Parent AS. <i> Early placental biomarkers of a developmental exposure to a very low dose of BPS.</i> <b> Reproductive Toxicology.</b>  </a>Volume 132, March 2025, 108854</p> </div>
         <div class="text-lg"> <p align="justify" style="margin-left: 20px"> <b> &#8594; *Co-first authorship</b></p> </div>
 
-
+      <li><div class="text-lg"> <p align="justify"> <a href="https://www.sciencedirect.com/science/article/pii/S0304389425007095?via%3Dihub" target="_blank"> Bridgeman L, Cimbalo A, <u>Lopez-Rodriguez D</u>, Pamies D, Frangiamone M. <i>  Exploring Toxicological Pathways of Microplastics and Nanoplastics: Insights from Animal and Cellular Models. </i> <b> Journal of Hazardous Materials.</b>Volume 490, 15 June 2025, 137795 </a></p> </div>
       <li><div class="text-lg"> <p align="justify"><a href="https://www.nature.com/articles/s41574-020-00436-3" target="_blank"><u>Lopez-Rodriguez D</u>, Franssen D, Bakker J, Lomniczi A, Parent AS. <i>Cellular and molecular features of EDC exposure: consequences for the GnRH network.</i> <b>Nature Reviews Endocrinology</b>. 2021 Feb;17(2):83-96  </div>
       </p></a></li>
       <li>  <div class="text-lg"><p align="justify"><a href="https://ehp.niehs.nih.gov/doi/10.1289/EHP8795" target="_blank">  <u>Lopez-Rodriguez D</u>, Aylwin CF, Delli V, Sevrin E, Campanile M, Martin M, Franssen D, Gérard A, Blacher S, Tirelli E, Noël A, Lomniczi A, Parent AS. <i>Multi- and Transgenerational Outcomes of an Exposure to a Mixture of Endocrine-Disrupting Chemicals (EDCs) on Puberty and Maternal Behavior in the Female Rat.</i> <b>Environ Health Perspect</b>. 2021 Aug;129(8):87003  </div>
