--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -282,9 +282,11 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
                   </ul>
 
       <section id="section8"></section>
-      <div class="mb-5"><div class="text-3xl w-full font-bold">Participation in Conferences <hr> </div></div>
+      <div class="mb-5"><div class="text-3xl w-full font-bold">Participation in Conferences & Public Events<hr> </div></div>
           <div class="time-line-container grid gap-4 mb-10">
                 <TimeLineElement title="Society of Environmental Toxicology and Chemistry (SETAC)"  subtitle="2025 -  Oral communication - Viena, Austria" />
+                <TimeLineElement title="Round Table - Endocrine Disruptors: a critical health and environmental challenge requiring urgent interdisciplinary action"  subtitle="2025 - PIRSE - Lausanne, Switzerland" />
+
                 <TimeLineElement title="Swiss Society of Endocrinology, Diabetology & Pediatrics"  subtitle="2025 -  Oral communication - Lausanne, Switzerland" />
                 <TimeLineElement title="Swiss Society of Toxicology (SST) "  subtitle="2024 -  Poster Presentation - Basel, Switzerland" />
                 <TimeLineElement title="SCAHT retreat"  subtitle="2024 -  Oral communication - Sursee, Switzerland" />
