--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -175,6 +175,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     <TimeLineElement
       title="PhD in Biomedical Sciences"
       subtitle= "2016 to 2020 at University of Liege (ULIEGE), Belgium" 
+       desc="Visiting Scholar (2018 & 2020, 6 months) at Oregon Health & Science University (OHSU), Portland, USA"
     />
     <TimeLineElement
       title="M.Sc. in Experimental Neuroscience"
