--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -65,7 +65,6 @@ import HorizontalCard from "../components/HorizontalCard.astro";
       <div style="line-height:50%;"> <br></div>
 
       <ul class="list-disc mx-6 mb-10 grid gap-2">
-        <li><div class="text-lg"> <p align="justify"> Carstens KE,Gronskaya E,Jaeckel D, <u>Lopez-Rodriguez D</u>, Shafer TJ,Zurich M,Pamies D. <i> Application of a high-density microelectrode array assay using a 3D human iPSC-derived brain microphysiological system model for in vitro neurotoxicity screening of environmental compounds. </i> Under Review in Archives of Toxicology </p> </div>
         <li><div class="text-lg"> <p align="justify"> Wang S, <u>Lopez-Rodriguez D</u>, Frangiamone M, Ma F, Pamies D. <i>  Proteomic profiling of the BrainSpheres derived from human induced pluripotent stem cells. </i> Under review in Frontiers in Cell and Developmental Biology. </p> </div></li>
           <li><div class="text-lg"> <p align="justify">  Guerrero-Limon G, Duroux D, Kamstra J, Legler J, Chevre N, <u>Lopez-Rodriguez D</u>. <i> An Integrative Framework for the Identification and Prioritization of Endocrine Disrupting Chemicals </i> Manuscripts in Preparation. </p> </div></li>
          <li><div class="text-lg"> <p align="justify">  Pamies D, Frangiamone M, Lamberto F, <u>Lopez-Rodriguez D</u>, Stacey, G. <i> Readiness of iPSC-Based Assays for Standardized Applications. </i> Report for the OECD. In Preparation.</p> </div></li>
@@ -89,6 +88,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
       <li><div class="text-lg"> <p align="justify"> Brunner M*, <u>Lopez-Rodriguez D</u>*, Estrada-Meza J, Dali J, Rohrbach A, Deglise T, Messina A, Thorens B, Santoni F, Langlet F. <i> Fasting induces a metabolic switch and a spatial redistribution of tanycyte functions on lipid processing and neuronal interactions. </i> <b>  Nature Communications. </b> Volume 15, article number 6604, (2024) </p> </div></li>
       <div class="text-lg"> <p align="justify" style="margin-left: 20px"> <b> &#8594; *Co-first authorship</b></p> </div>
+      <li><div class="text-lg"> <p align="justify"> Carstens KE,Gronskaya E,Jaeckel D, <u>Lopez-Rodriguez D</u>, Shafer TJ,Zurich M,Pamies D. <i> Application of a high-density microelectrode array assay using a 3D human iPSC-derived brain microphysiological system model for in vitro neurotoxicity screening of environmental compounds. </i> <b> Archives of Toxicology</b>. </p> </div>
 
       <li><div class="text-lg"> <p align="justify"> <a href="https://www.sciencedirect.com/science/article/pii/S0304389425007095?via%3Dihub" target="_blank">    Fudvoye J*, <u>Lopez-Rodriguez D</u>*, Parent AS. <i> Early placental biomarkers of a developmental exposure to a very low dose of BPS.</i> <b> Reproductive Toxicology.</b>  </a>Volume 132, March 2025, 108854</p> </div>
         <div class="text-lg"> <p align="justify" style="margin-left: 20px"> <b> &#8594; *Co-first authorship</b></p> </div>
