--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -90,12 +90,12 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
    <br>
    &nbsp;&nbsp;&nbsp;&nbsp;  - <b>Collaborative Spirit</b>
   <div style="margin-left: 2em;">
-    Team and project leadership in a fast-paced multi-disciplinary environment, scientific management and mentoring. Demonstrated ability to build and lead productive teams, complete project deliverables on time and within budget.
+    Experience bringing technical leadership in fast-paced cross-functional environments, in scientific management and mentoring. Demonstrated ability to build and lead productive teams, complete project deliverables on time.
   </div>
     <br>
    &nbsp;&nbsp;&nbsp;&nbsp; -	<b>Computational biology</b>
    <div style="margin-left: 2em;">
-     R and Python programming for processing, analyzing and visualizing large datasets and omics data. Advanced statistical analysis of complex high-content datasets (i.e. mixed-effect model, correlation network, hierarchical clustering, joint pathway enrichment analysis), multi-omics integration (transcriptomics, proteomics, metabolomics, lipidomics) and machine learning (i.e. extreme gradient boosting).
+     R, Python & Bash programming for processing, analyzing and visualizing large biological datasets and omics data. Advanced statistical analysis of complex high-content datasets (i.e. mixed-effect model, correlation network, hierarchical clustering, pathway enrichment analysis), multi-omics integration (ex. transcriptomics, proteomics, metabolomics, lipidomics) and machine learning (ex. XGBOOST).
    </div>
   
   </div>
