--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,8 +27,10 @@ const last_posts = posts.slice(0, 3);
 
     <div class="pb-12 mt-5"> <div class="text-4xl font-bold"> David Lopez-Rodriguez, PhD</div>
           <div class="text-2xl font-bold mt-1"> 
+            
         <span class='bigger'></span>  
-        <span class='headmain'> Senior Scientific Project Manager | Bioinformatician | Translational Researcher  </span> </div>
+        <span class='headmain'> Toxicologist/Biologist | Bioinformatician | Multiomics Specialist | Functional Genomics | Data-Driven Risk Assessment, NGRA & In Silico Tox | Nutrition | Endocrine Disruptors | Freelancer | </span> </div>
+        <br>
         <div style="height: 0.5rem;"></div>
             <div class="text-1xl font-bold">
             <span class='bigger'>&nbsp;&nbsp;&nbsp;&nbsp; (1)</span>  
@@ -52,14 +54,14 @@ const last_posts = posts.slice(0, 3);
           <div class="py-1"><text class="text-lg"> 
       <br>
                <div class="mb-1 text-justify">
-                Senior multidisciplinary scientist passionate about computational biology, translational medicine and public health, with expertise in endocrine-disrupting chemicals, multiomics analysis and in-silico modeling.            
-              </div>
+                Senior multidisciplinary scientist passionate about bioinformatics, nutrition, computational toxicology, translational medicine and public health, with expertise in multiomics analysis, in-silico modeling. 
+                My main objective is to develop computational tools that can make a valuable contribution to public health and society.    </div>
             </text> </div></p>
             </text>
             <div class="py-1">  </div>
             <div class="py-1">  </div>
             <text class="text-lg"> <b>	Disciplines:</b> 
-              Bioinformatics/Biostatistics, Biomedicine, Endocrinology, Neuroscience, Chemo-informatics. </p> </text>       
+              Bioinformatics/Biostatistics, Biomedicine, Nutritional Sciences, Endocrinology, Neuroscience, Chemo-informatics. </p> </text>       
         </div>
 <br>
         <div>
